tests/snapshots/search_navigation_test__search_in_visual_mode.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Visual
Cursor: 0:4
Lines: 1

Buffer:
hell[o] world test
