tests/snapshots/search_navigation_test__search_single_char.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
a b [c] d e
