tests/snapshots/search_navigation_test__semicolon_repeat_f.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:8
Lines: 1

Buffer:
a b a c [a] d
