tests/snapshots/search_navigation_test__star_multiple_matches.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:18
Lines: 1

Buffer:
test one test two [t]est
