tests/snapshots/search_navigation_test__t_till_char.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:5
Lines: 1

Buffer:
hello[ ]world
