tests/snapshots/search_navigation_test__yank_to_search.snap
---
source: tests/search_navigation_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:15
Lines: 1

Buffer:
hello world tes[t]
